Fix for TUSCANY-1605, allowing implementation-resource to serve in-jar resources.
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/java/sca@570884 13f79535-47bb-0310-9956-ffa450edef68